Map list view fix for tall mobile screens (#703)
Fix a bug where the map would extend below the results on mobile.

This bug occurred on the list view page only within the mobile
breakpoint, and only on non-iframed experiences.

Fix the bug by adding a new YxtPage-wrapper--mobileListView CSS
class which lets us apply a fix to the Answers-footer. We fix the footer
by removing the margin using padding instead so that the white
background of the footer covers the map.

This PR updates the map orchestrator to improve the handling of the
mobileListView and the mobileMapView CSS classes. These changes
ensure that classes associated with mobile views only exist when the
page is within the mobile breakpoint. This has the side effect of fixing
layout issues when someone drags the screen between mobile and
desktop sizes.

J=SLAP-1230
TEST=manual

Test very tall screen sizes within the mobile breakpoint on list view
and confirm that the bug is fixed. Test on iframe and non-iframe
experiences to make sure things work as expected. Observe the
listShown CSS class being properly set on the page. Ensure that
a YxtFooter can be put on the page and have it look as expected.

--- a/static/scss/answers/interactive-map/VerticalFullPageMap.scss
+++ b/static/scss/answers/interactive-map/VerticalFullPageMap.scss
@@ -430,17 +430,14 @@
   }
 
   // TODO make this the default
-  &.VerticalFullPageMap--listShown
+  &.VerticalFullPageMap--mobileListView
   {
     .Answers
     {
       &-resultsWrapper
       {
-        @include bplte($mobile-break-point-max)
-        {
-          top: 0;
-          display: flex;
-        }
+        top: 0;
+        display: flex;
       }
 
       &-viewMapText
@@ -462,7 +459,7 @@
     }
   }
 
-  &.VerticalFullPageMap--mapShown
+  &.VerticalFullPageMap--mobileMapView
   {
     &:not(.CollapsibleFilters--expanded) .Answers-map {
       top: var(--yxt-maps-mobile-results-header-height);
@@ -483,18 +480,15 @@
     }
   }
 
-  &.VerticalFullPageMap--detailShown
+  &.VerticalFullPageMap--mobileDetailShown
   {
     .Answers
     {
       &-map
       {
-        @include bplte($mobile-break-point-max)
-        {
-          position: absolute;
-          top: var(--yxt-maps-mobile-results-header-height);
-          height: calc(100% - var(--yxt-maps-mobile-results-header-height) - var(--yxt-maps-mobile-detail-card-height));
-        }
+        position: absolute;
+        top: var(--yxt-maps-mobile-results-header-height);
+        height: calc(100% - var(--yxt-maps-mobile-results-header-height) - var(--yxt-maps-mobile-detail-card-height));
       }
 
       &-searchThisWrapper {
@@ -660,7 +654,7 @@
   }
 }
 
-.YxtPage-wrapper--mapShown {
+.YxtPage-wrapper--mobileMapView {
   min-height: var(--yxt-maps-mobile-height);
 
   .YxtPage-content {
@@ -672,12 +666,20 @@
   }
 }
 
-.YxtPage-wrapper--detailShown {
+.YxtPage-wrapper--mobileDetailShown {
   .Answers-footer {
     display: none;
   }
 
   .YxtFooter {
     display: none;
+  }
+}
+
+.YxtPage-wrapper--mobileListView {
+  .Answers-footer {
+      margin-top: 0;
+      padding-top: calc(24px + var(--yxt-base-spacing));
+      position: relative;
   }
 }
